--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	<title>HTML Assignment 3</title>
 <style>
   .middle {
-    border: 1px solid black;
+    border: 1px solid rgb(0,0,0);
     border-spacing: 1px;
     padding: 1px;
   }
@@ -27,7 +27,7 @@
 <table id="table-1" class="middle">
   <tr>
     <td id="t11">Row 1, Column 1</td>
-    <td id="t12">Row 1, Column 2</td>
+    <td id="t12" class="center">Row 1, Column 2</td>
     <td id="t13" class="right">Row 1, Column 3</td>
   </tr>
   <tr>
