--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
 	<title>HTML Assignment 3</title>
 <style>
   .middle {
-    border: 1px solid rgb(0,0,0);
+    border: 1px solid rgb(0, 0, 0);
     border-spacing: 1px;
     padding: 1px;
   }
