--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 <h2>Table 1</h2>
 <table id="table-1" class="middle">
   <tr>
-    <td id="t11">Row 1, Column 1</td>
+    <td id="t11" class="middle">Row 1, Column 1</td>
     <td id="t12" class="center">Row 1, Column 2</td>
     <td id="t13" class="right">Row 1, Column 3</td>
   </tr>
